[tool.poetry]
name = "poetry-test"
version = "0.1.0"
description = "Poetry tutorial hands-on"
authors = ["Baptiste PICARD"]
readme = "README.md"
packages = [{include = "poetry_test"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
