[tool.poetry]
name = "poetry-test"
version = "0.1.0"
description = "Poetry tutorial hands-on"
authors = ["Baptiste PICARD"]
readme = "README.md"
packages = [{include = "poetry_test"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.0"
numpy = "^1.24.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pylint = "^2.17.2"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
